name:            spaceprobe
version:         0.0.0
license:         BSD3
license-file:    LICENSE
category:        Optimization
author:          Sean Burton <burton.seanr@gmail.com> 
maintainer:      Sean Burton <burton.seanr@gmail.com>
stability:       experimental
tested-with:     GHC == 7.6
synopsis:        Optimization over arbitrary search spaces 
cabal-version:   >= 1.8
homepage:        https://github.com/SeanRBurton/spaceprobe
bug-reports:     https://github.com/SeanRBurton/spaceprobe/issues
build-type:      Simple
description:
    A parameter optimization library, designed for optimizing over 
    arbitrary search spaces. It is particularly well suited for discontinuous
    and/or high-dimensional search spaces.
extra-source-files:
    README.markdown

library
  build-depends: base,
                 containers,
                 clock,
                 erf
  exposed-modules: Control.SpaceProbe.Probe
                   Control.SpaceProbe.Search
                  -- Control.SpaceProbe.Internal.Probe
                  -- Control.SpaceProbe.Internal.Search
  ghc-options: -O3 -fllvm -Wall

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests .
  main-is:        tests.hs

  ghc-options:
    -Wall

  build-depends:
    QuickCheck >= 2.7

benchmark benchmarks
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  ghc-options: -O2 -Wall
  main-is: Benchmarks.hs
  
source-repository head
  type:     git
  location: https://github.com/SeanRBurton/spaceprobe

